# eat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  LICENSE  README.md  ROADMAP.md  TODO.md  docker-compose.yml
.github/: README.md
backend/: main.py  pyproject.toml
backend/app/core/: config.py
backend/app/database/: session.py
docker/: README.md
docs/: AI_RULES.md  API.md  COMPONENTS.md  CONVENTIONS.md  DATABASE.md  DEPLOY.md  PRD.md  ROUTES.md  UI.md
frontend/: .eslintrc.cjs  eslint.config.mjs  package.json  tsconfig.json
frontend/src/: app.config.ts  app.tsx
frontend/src/pages/index/: index.config.ts  index.scss  index.tsx
frontend/src/theme/: index.scss
frontend/src/types/: shims.d.ts  taro.d.ts
scripts/: README.md
