[project]
name = "minicook-backend"
version = "0.1.0"
description = "MiniCook FastAPI 后端骨架"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic-settings",
  "psycopg[binary]",
  "redis",
  "minio"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
